...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/email_box"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:hint="Example: Shaz@gmail.com"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
...
                android:gravity="start"
                android:paddingBottom="1dp"
                android:text="@string/name_string"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/name_box"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <EditText
...
                android:gravity="start"
                android:paddingBottom="1dp"
                android:text="@string/phone_text"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/phone_box"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_box"
                app:layout_constraintVertical_bias="1.0" />

...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button

            android:id="@+id/save_button"
            android:layout_width="150sp"
            android:layout_height="48sp"
            android:text="Save"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
...
